--- a/decoradores.ipynb
+++ b/decoradores.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpyn+NQajLsv+8VEseLsnw",
+      "authorship_tag": "ABX9TyPaKHKfGjatHynKOrK0wLbU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "I4L1q2KUpnkE"
+        "id": "I4L1q2KUpnkE",
+        "outputId": "1bd55d89-36c9-4acd-c557-9050a643ec29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Antes da função\n",
+            "Depois da função\n",
+            "7\n"
+          ]
+        }
+      ],
       "source": [
         "def meu_decorador(func):\n",
         "  def wrapper(*args, **kwargs):\n",
@@ -58,6 +72,28 @@
         "resultado = minha_funcao(3, 4)\n",
         "print(resultado)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repete(num):\n",
+        "    def decorador(func):\n",
+        "        def wrapper(*args, **kwargs):\n",
+        "            for _ in range(num):\n",
+        "                func(*args, **kwargs)\n",
+        "        return wrapper\n",
+        "    return decorador\n",
+        "\n",
+        "@repete(3)\n",
+        "def saudacao(nome):\n",
+        "    print(f\"Olá, {nome}!\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "liXqrjfe3b8L"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
