--- a/decoradores.ipynb
+++ b/decoradores.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaKHKfGjatHynKOrK0wLbU",
+      "authorship_tag": "ABX9TyPlfnmnma1y3ObivPhn6e0G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "I4L1q2KUpnkE",
-        "outputId": "1bd55d89-36c9-4acd-c557-9050a643ec29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6e34fc5e-9732-47e1-cdeb-7e94e5513686"
       },
       "outputs": [
         {
@@ -87,13 +87,54 @@
         "@repete(3)\n",
         "def saudacao(nome):\n",
         "    print(f\"Olá, {nome}!\")\n",
-        ""
+        "\n",
+        "saudacao(\"João\")\n"
       ],
       "metadata": {
-        "id": "liXqrjfe3b8L"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "liXqrjfe3b8L",
+        "outputId": "f1624ea2-d8b8-48b3-ba89-1663414f5ed5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá, João!\n",
+            "Olá, João!\n",
+            "Olá, João!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def saudacao(nome):\n",
+        "    print(f\"Olá, {nome}!\")\n",
+        "\n",
+        "saudacao(\"João\")\n"
+      ],
+      "metadata": {
+        "id": "JHzbbx5S4nRS",
+        "outputId": "d247ee72-30bf-4ae5-f4d9-db325529147b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá, João!\n"
+          ]
+        }
+      ]
     }
   ]
 }
